--- a/utils/i18n/ca.json
+++ b/utils/i18n/ca.json
@@ -71,7 +71,7 @@
         ]
     },
     "contact": {
-        "title": "contacte"
+        "title": "Contacte"
     },
     "footer": {
         "title": "Enginyer Telemátic",
