--- a/utils/i18n/es.json
+++ b/utils/i18n/es.json
@@ -71,7 +71,7 @@
         ]
     },
     "contact": {
-        "title": "contacto"
+        "title": "Contacto"
     },
     "footer": {
         "title": "Ingeniero Telemático",
