small fix in english version with keywords

--- a/utils/i18n/en.json
+++ b/utils/i18n/en.json
@@ -5,7 +5,7 @@
     },
     "me": {
         "title": "About Me",
-        "description": "I am a network and software engineer, graduate in telecomunications with a double master's in Cloud and network infrastructures in Aalto, Finland, and KTH, Sweden. I have already been involved in open-source projects that thousands of people use daily, and I have also developed several websites with significant traffic. The technical part is important, but the person behind it is even more so if you want to meet, please don't hesitate to contact me!",
+        "description": "I am a network and software engineer, graduate in telecomunications with a double master's in Cloud and network infrastructures in Aalto (Finland) and KTH (Sweden). I have already been involved in open-source projects that thousands of people use daily, and I have also developed several websites with significant traffic. The technical part is important, but the person behind it is even more so if you want to meet, please don't hesitate to contact me!",
         "keywords": ["engineer", "software", "Cloud", "infrastructures", "network", "telecomunications", "Finland", "Aalto", "KTH", "Sweden", "ntc-templates", "open-source"]
     },
     "education": {
